
  * Rewrite the internal streaming pipeline.
    This is not externally visible, but needed for a future timeshifter.

  * Make it compile on gcc 4.4

  * Send 'source' and 'network' information in HTSP.subscriptionStart message.

  * When deleting a channel any channel-bound autorecording would stay in
    memory and, sooner or later, cause a crash. This has now been fixed.

-- Andreas Öman <andreas@lonelycoder.com>  Wed, 03 Jun 2009 23:11:30 +0200

hts-tvheadend (2.1) hts; urgency=low

  * Add debconf setup scripts to create a superuser account.
	
  * HTSP server slightly modified. Now also supports the XBMC HTSP client.
	
  * tvheadend and showtime went separate ways.
	
  * tvheadend: Record post-processing added again, run command when a
    recording is done.

  * tvheadend: Fix characterset translation bug introduced in r1902.

 -- Andreas Öman <andreas@lonelycoder.com>  Thu, 28 May 2009 21:07:44 +0200

hts-tvheadend (2.0) unstable; urgency=low

  * tvheadend: All setup and configuration is done from the web user interface.

  * tvheadend: New web user interface based on ExtJS

 -- Andreas Öman <andreas@lonelycoder.com>  Thu, 16 Oct 2008 19:47:23 +0200

hts-tvheadend (1.4) unstable; urgency=low

  * tvheadend: Add support for DVB-S (still in experimenal state)

 -- Andreas Öman <andreas@lonelycoder.com>  Sat, 30 Mar 2008 18:00:00 +0100

hts-tvheadend (1.3) unstable; urgency=low

  * tvheadend: Add support for executing a post processing script after
    recording is completed.

  * tvheadend: Mark I-frames as key-frames in recorder (should make seeking
    work better).

  * tvheadend: Correctly set duration of packets in recorder.

 -- Andreas Öman <andreas@lonelycoder.com>  Thu, 28 Mar 2008 18:00:00 +0100

hts-tvheadend (1.2) unstable; urgency=low

  * Tvheadend has been rewritten from scratch

 -- Andreas Öman <andreas@lonelycoder.com>  Thu, 28 Feb 2008 17:30:00 +0100

hts-tvheadend (1.1) unstable; urgency=low
