@@ -18,6 +18,9 @@ hts-tvheadend (2.2) hts; urgency=low
   * When deleting a channel any channel-bound autorecording would stay in
     memory and, sooner or later, cause a crash. This has now been fixed.
 
+  * Add extra scan for XMLTV grabbers in $PATH. Apart from $PATH we also
+    scan in /bin, /usr/bin, /usr/local/bin
+
 -- Andreas Öman <andreas@lonelycoder.com>  Wed, 03 Jun 2009 23:11:30 +0200
 
 hts-tvheadend (2.1) hts; urgency=low
